# safecppjson

./: .gitignore  CMakeLists.txt  README.md
cmake/: safecppjsonConfig.cmake.in  setup_installation.cmake
src/: exceptions.hpp  guard_field.hpp  main.cpp  to_from_json.cpp  to_from_json.hpp  with_label.cpp
src/include/: exceptions.hpp  to_from_json.hpp  with_label.hpp
tests/: CMakeLists.txt  main.cpp
tests/json/: missing_field_candle.json  valid_candle.json  valid_more_stuff.json  wrong_type_candle.json
